# edu-ntnu-inft2503

./: CMakeLists.txt  README.md  conanfile.txt  temps.txt
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
Exercise_1/: CMakeLists.txt  Exercise_1_a.cpp  Exercise_1_b.cpp  temps.txt
Exercise_2/: CMakeLists.txt  Exercise_2_5.cpp
Exercise_3/: CMakeLists.txt  Exercise_3_1.cpp  Exercise_3_1.hpp  Exercise_3_2.cpp  Exercise_3_3.cpp  Exercise_3_4.cpp  commodity.cpp  commodity.hpp
Exercise_4/: CMakeLists.txt  Exercise_4_1.cpp  Exercise_4_2.cpp
Exercise_5/: CMakeLists.txt  Exercise_5_1.cpp  Exercise_5_2.cpp  chessboard.cpp
Exercise_6/: CMakeLists.txt  Exercise_6_1.cpp  Exercise_6_2.cpp  chessboard.cpp  chessboard_print.cpp  http_message.cpp  http_message.h
Exercise_7/: CMakeLists.txt  Exercise_7_1_a.cpp  Exercise_7_1_b.md  Exercise_7_2.cpp  Fraction.cpp  Fraction.hpp  Set.cpp  Set.hpp
Exercise_8/: CMakeLists.txt  Exercise_8_1.cpp  Exercise_8_2.cpp  Pair.hpp
Exercise_9/: CMakeLists.txt  Exercise_9.cpp
apps/: CMakeLists.txt  Exercise_1a.cpp  Exercise_1b.cpp  Exercise_2_1_a.cpp  Exercise_2_1_b.cpp  Exercise_2_2.md  Exercise_2_3.md  Exercise_2_4.cpp  Exercise_2_5.cpp  Exercise_2_6.cpp  Exercise_3_a.cpp  Exercise_3a.cpp
include/Example_library/: sum.hpp
scripts/: conan_build.bat  create_tarball.sh
src/Example_library/: CMakeLists.txt  sum.cpp
test/: CMakeLists.txt  sum-T.cpp
